discussion/kv_engine/172796/172796_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Tidy DCPBackfillDisk state

1) Bring the enum inside the class
2) Change to enum class
3) Rename some states to better reflect how they change the flow

Change-Id: I84abb72c4aadec0ab0f196f64d3e31722e6c23f9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-03-24 15:49:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-03-24 16:09:23.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
Line:182, engines/ep/src/dcp/backfill_disk.cc -> why not use the stream operator to_string the state?

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-24 17:19:33.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16176/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::create:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:197:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::scan:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:200:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::complete:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:203:10: error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
    case DCPBackfillByIdDisk::State::done:
         ^~~~~~~~~~~~~~~~~~~
         DCPBackfillDisk
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:77:7: note: "DCPBackfillDisk" declared here
class DCPBackfillDisk : public virtual DCPBackfill {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16176/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:10:
error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16176/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44668/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [57/159]: startup token stat...(67 ms) OK


99% tests passed, 3 tests failed out of 432

Total Test time (real) = 691.21 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44668/ )

Timeout of a CTest test 430/432 Test #299: ep_testsuite_dcp.full_eviction.comp_passive ...................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44668/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37588/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:10:
error: use of undeclared identifier "DCPBackfillByIdDisk"; did you mean "DCPBackfillDisk"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37588/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15106/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/backfill_disk.h b/engines/ep/src/dcp/backfill_disk.h
index b141efe6a..a393f540a 100644
--- a/engines/ep/src/dcp/backfill_disk.h
+++ b/engines/ep/src/dcp/backfill_disk.h
@@ -101,7 +101,6 @@ protected:
     void cancel() override;
     void transitionState(State newState);
 
-
     /**
      * Create the scan, initialising scanCtx from KVStore initScanContext
      */

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15106/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17020/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17947/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18979/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26357/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5833/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5892/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-03-25 14:35:46.000000000
Message: 
Patch Set 1:

(1 comment)
Line:182, engines/ep/src/dcp/backfill_disk.cc -> Because it's an invalid state, calling the ostream operator will throw

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-03-25 14:52:59.000000000
Message: 
Patch Set 1: -Code-Review

(1 comment)
Line:182, engines/ep/src/dcp/backfill_disk.cc -> :D fair point

----------------------------------------------------------------------------------------------------------------------
